--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             color: white;
             background: red;
             margin: 0 auto;
+            align-items: center;
         }
         .header .nav .logo{
             width: 50%;
